[gd_scene load_steps=7 format=3 uid="uid://dyc2s32yy301v"]

[ext_resource type="Script" path="res://Scripts/Gift.gd" id="1_ru126"]
[ext_resource type="Texture2D" uid="uid://y553uj7w3cht" path="res://Sprites/Gift1.png" id="2_a2tyv"]
[ext_resource type="Texture2D" uid="uid://c54nwrd6x4l0w" path="res://Sprites/Gift2.png" id="3_nww2g"]
[ext_resource type="Texture2D" uid="uid://0wvy41yuchf8" path="res://Sprites/Gift3.png" id="4_own23"]
[ext_resource type="Texture2D" uid="uid://b72nn3kf2eccl" path="res://Sprites/Gift4.png" id="5_j8i7r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgyph"]
size = Vector2(85, 20)

[node name="Gift" type="RigidBody2D"]
script = ExtResource("1_ru126")

[node name="Gift1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_a2tyv")

[node name="Gift2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-6.99997, 8)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_nww2g")

[node name="Gift3" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -7)
scale = Vector2(0.08, 0.08)
texture = ExtResource("4_own23")

[node name="Gift4" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.00002, -1.90735e-06)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_j8i7r")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_tgyph")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
